Cara modifiquei bastante coisa. Faltava uma coisa no nosso projeto que era o padrao dele. Ainda nao implementei a interface mas, agoroa fica mais facil de identificarmos o que cada coisa vai fazer. O cadastro de usuario ja esta cadastrando e excluindo. Isso eh um grande passo ja. Agora fica mais facil para trabalharmos.

--- a/crudProject/WebContent/css/main.css
+++ b/crudProject/WebContent/css/main.css
@@ -94,7 +94,9 @@
     margin-top:10px;
 }
 .frmNovo input.text,
-.frmNovo input[type="text"]{
+.frmNovo input.password,
+.frmNovo input[type="text"],
+.frmNovo input[type="password"]{
 	width: 300px;
 	padding:3px 5px;
 	border:1px solid #999;
